# uprolog

./: LICENSE  README.md  uProlog.cabal
src/: UProlog.hs
src/UProlog/: State.hs  Util.hs  Val.hs
