name:                uProlog
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Luke Grehan
maintainer:          luketenant@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     UProlog, UProlog.Val, UProlog.State
  other-extensions:    FlexibleInstances, FlexibleContexts
  build-depends:       base >=4.8, logict, mtl, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-Options:         -O2 -Wall
